<resources>
    <string name="app_name">LoCATor</string>
    <string name="cloud_styling_basic_map_id">26a66b031807a453</string>
    <string name="home">Home</string>
    <string name="add_cat">Add Cat</string>
    <string name="notifications">Notifications</string>
    <string name="all_cats">All Cats</string>
    <string name="witness">Witness</string>
    <string name="list">List</string>
    <string name="locator">LoCATor</string>
    <string name="log_out">Log Out</string>
    <string name="change_password">Change Password</string>
    <string name="liked_cats">Liked Cats</string>
    <string name="name_of_cat">Name of Cat:</string>
    <string name="cat_detail">Cat Detail</string>
    <string name="notification_channel_name">New witness</string>
    <string name="new_pictures_title">New witness</string>
    <string name="new_pictures_text">has just been witnessed!</string>
    <string name="change_campus">Change Campus</string>
    <string name="login">Login</string>
    <string name="no_account_sign_up">No account? Sign Up</string>
    <string name="forget_pwd">Forget password?</string>
    <string name="send_request">Reset password</string>
    <string name="go_back">Go back</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_log_in">Have an account? Log in</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="submit">Submit</string>
    <string name="go_back">Go back</string>
    <string name="history">History</string>
</resources>